tests/tests/snapshots/integration__run_images@place_image1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/place_image1.gleam
---
<svg width="48.0" height="48.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="48.0" height="48.0" transform="rotate(0.0 24.0 24.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 48.0 0.0 L 48.0 48.0 L 0.0 48.0 Z" fill="rgba(211, 211, 211, 1.0)" />
      <path d="M 24.0 10.143594 L 40.0 37.856406 L 8.0 37.856406 Z" fill="rgba(255, 0, 0, 1.0)" />
    </g>
  </g>
</svg>
