tests/tests/snapshots/integration__run_images@place_image_align3.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/place_image_align3.gleam
---
<svg width="160.0" height="32.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <g>
          <g>
            <path d=" Z" />
            <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="32.0" height="32.0" transform="rotate(0.0 16.0 16.0)" /></clipPath></defs>
            <g clip-path="url(#clip0)" >
              <g>
                <path d="M 0.5 0.5 L 32.5 0.5 L 32.5 32.5 L 0.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
                <path d="M 8.0 0.0 A 8.0 8.0 0.0 0 1 -8.0 0.0 A 8.0 8.0 0.0 0 1 8.0 0.0 Z" fill="rgba(255, 99, 71, 1.0)" />
              </g>
            </g>
          </g>
          <defs><clipPath id="clip1" ><rect x="32.0" y="0.0" width="32.0" height="32.0" transform="rotate(0.0 48.0 16.0)" /></clipPath></defs>
          <g clip-path="url(#clip1)" >
            <g>
              <path d="M 32.5 0.5 L 64.5 0.5 L 64.5 32.5 L 32.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
              <path d="M 48.0 8.0 A 8.0 8.0 0.0 0 1 32.0 8.0 A 8.0 8.0 0.0 0 1 48.0 8.0 Z" fill="rgba(255, 99, 71, 1.0)" />
            </g>
          </g>
        </g>
        <defs><clipPath id="clip2" ><rect x="64.0" y="0.0" width="32.0" height="32.0" transform="rotate(0.0 80.0 16.0)" /></clipPath></defs>
        <g clip-path="url(#clip2)" >
          <g>
            <path d="M 64.5 0.5 L 96.5 0.5 L 96.5 32.5 L 64.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
            <path d="M 88.0 16.0 A 8.0 8.0 0.0 0 1 72.0 16.0 A 8.0 8.0 0.0 0 1 88.0 16.0 Z" fill="rgba(255, 99, 71, 1.0)" />
          </g>
        </g>
      </g>
      <defs><clipPath id="clip3" ><rect x="96.0" y="0.0" width="32.0" height="32.0" transform="rotate(0.0 112.0 16.0)" /></clipPath></defs>
      <g clip-path="url(#clip3)" >
        <g>
          <path d="M 96.5 0.5 L 128.5 0.5 L 128.5 32.5 L 96.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
          <path d="M 128.0 24.0 A 8.0 8.0 0.0 0 1 112.0 24.0 A 8.0 8.0 0.0 0 1 128.0 24.0 Z" fill="rgba(255, 99, 71, 1.0)" />
        </g>
      </g>
    </g>
    <defs><clipPath id="clip4" ><rect x="128.0" y="0.0" width="32.0" height="32.0" transform="rotate(0.0 144.0 16.0)" /></clipPath></defs>
    <g clip-path="url(#clip4)" >
      <g>
        <path d="M 128.5 0.5 L 160.5 0.5 L 160.5 32.5 L 128.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
        <path d="M 168.0 32.0 A 8.0 8.0 0.0 0 1 152.0 32.0 A 8.0 8.0 0.0 0 1 168.0 32.0 Z" fill="rgba(255, 99, 71, 1.0)" />
      </g>
    </g>
  </g>
</svg>
