tests/tests/snapshots/integration__run_images@place_line3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/place_line3.gleam
---
<svg width="100.0" height="100.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="100.0" height="100.0" transform="rotate(0.0 50.0 50.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 100.0 0.0 L 100.0 100.0 L 0.0 100.0 Z" fill="rgba(85, 107, 47, 1.0)" />
      <path d="M 25.0 25.0 L 100.0 100.0" fill="none" stroke="rgba(218, 165, 32, 1.0)" stroke-width="30.0" stroke-linejoin="round" stroke-linecap="round" />
    </g>
  </g>
</svg>
